实现全栈热更新

--- a/myMessage/static/base.css
+++ b/myMessage/static/base.css
@@ -3,9 +3,10 @@
     text-indent: 30px;
 }
 .home-banner{
-    background: thistle;
+    background: #333;
     height: 460px;
 }
 .home-banner a {
     cursor: pointer;
+    color: #fff;
 }
