--- a/myMessage/static/base.css
+++ b/myMessage/static/base.css
@@ -1,6 +1,12 @@
 body {
   font-family: 'Microsoft YaHei UI Light'; }
 
+body {
+  height: 100%; }
+
+#app {
+  height: 100%; }
+
 .message-text {
   margin: 20px 0 0;
   text-indent: 30px; }
@@ -31,5 +37,27 @@ body {
   .blog-list-box a {
     cursor: pointer;
     text-decoration: none; }
+
+.blog-detail-box .blog-list-box {
+  border-bottom: solid 0px #fff; }
+
+.blog-login-wrap {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background: #262626; }
+  .blog-login-wrap .blog-login-box {
+    width: 400px;
+    height: 300px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    background: #f4f4f4;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    transform: translate(-50%, -50%); }
+  .blog-login-wrap form {
+    padding: 50px 0 0; }
 
 /*# sourceMappingURL=base.css.map */
