--- a/myMessage/static/base.scss
+++ b/myMessage/static/base.scss
@@ -1,6 +1,12 @@
 body {
   font-family: 'Microsoft YaHei UI Light';
 }
+body{
+  height: 100%;
+}
+#app {
+  height: 100%;
+}
 .message-text {
   margin: 20px 0 0;
   text-indent: 30px;
@@ -24,7 +30,6 @@ body {
     }
   }
 }
-
 .blog-list-box {
   width: 800px;
   margin: 0 auto;
@@ -39,5 +44,32 @@ body {
   a {
     cursor: pointer;
     text-decoration: none;
+  }
+}
+.blog-detail-box {
+  .blog-list-box {
+    border-bottom: solid 0px #fff;
+  }
+}
+
+.blog-login-wrap {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background: #262626;
+  .blog-login-box {
+    width: 400px;
+    height: 300px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    background: #f4f4f4;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    transform: translate(-50%, -50%);
+  }
+  form {
+    padding: 50px 0 0;
   }
 }
